gccida/g2/dw2_asm_output_delta
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_delta/src/dwarf2asm.c:568:35: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), lab2); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_delta/src/dwarf2asm.c:569:35: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), lab1); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_delta/src/dwarf2asm.c:570:31: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v6, v5); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_delta/src/dwarf2asm.c:574:49: error: use of undeclared identifier 'stru_6F109F'
fprintf( asm_out_file, "\t%s ", ( const char *)&stru_6F109F._IO_save_end + 7); 
                                                ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_delta/src/obj/dwarf2asm.o] Error 1
